--- a/css/warcry.css
+++ b/css/warcry.css
@@ -2,7 +2,7 @@ body {
 	background-color: #ccc;
 	/*font-family: 'Open Sans';*/
 	font-size: 16px;
-	line-height: 1.3;
+	/*line-height: 1.3;*/
 }
 
 a,
@@ -244,7 +244,9 @@ a:focus {
 }
 
 #article ul, .news ul {
-	padding-top: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin-bottom: 0;
 }
 
 #article ul:first-child, .news ul:first-child {
@@ -256,7 +258,11 @@ a:focus {
 }
 
 #article li, .news li {
-	padding: 2px 0px;
+	margin: 10px 0px;
+}
+
+#article li > div.center, .news li > div.center {
+	margin-left: -45px;
 }
 
 .news div.read-more {
@@ -749,7 +755,7 @@ a.blue:hover { color: white; }
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
-	margin: -5px;
+	margin: -7px -5px 0 -5px;
 }
 
 /*.news .center {
